<resources>
    <string name="app_name">Muraliz-E</string>
    <string name="nome_de_usuario">Nome de usuário</string>
    <string name="senha">Senha</string>
    <string name="nome_completo">Nome completo</string>
    <string name="e_mail">E-mail</string>
    <string name="n_mero_de_matricula">Número de matricula</string>
    <string name="n_mero_de_telefone">Número de telefone</string>
    <string name="universidade">Universidade</string>
    <string name="curso">Curso</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="login">Login</string>
    <string name="ainda_n_o_possui_uma_conta_cadastre_se">Ainda não possui uma conta?</string>
    <string name="cadastre_se">Cadastre-se!</string>
    <string name="postar_no_mural">POSTAR NO MURAL</string>
    <string name="buscar">Buscar</string>
    <string name="falha_ao_cadastrar_aluno">Falha ao cadastrar aluno</string>
    <string name="minhas_solicitacoes">MINHAS\nSOLICITAÇÕES</string>
    <string name="adicionar_disciplinas">ADICIONAR DISCIPLINAS</string>
    <string name="responder">Responder</string>
    <string name="solicitacoes">Solicitações</string>
    <string name="s_solicitacao">No momento, não há solitações para você</string>
    <string name="falha_na_internet">Falha na internet</string>
    <string name="falha_senha_invalida">Senha incorreta</string>
    <string name="falha_email_n_cadastrado">E-mail não cadastrado</string>
    <string name="failure_login">Falha ao logar</string>
    <string name="bem_vindo">Bem-vindo,</string>
    <string name="nome_da_disciplina">Nome da Disciplina</string>
    <string name="cod_example">XXX-000</string>
    <string name="solicitar">Postar</string>
    <string name="disciplina">Disciplina</string>
    <string name="descricao">Descrição</string>
    <string name="resolvida">Resolvida</string>
    <string name="remover_disciplinas">REMOVER\nDISCIPLINAS</string>
    <string name="preencha_a_solicitacao">Preencha a disciplina e a descrição da sua solicitação</string>
    <string name="imagem_de_solicita_o">imagem de solicitação</string>
    <string name="adiconar_imagem">Adiconar imagem</string>
</resources>