<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroAluno"
    android:fillViewport="true">
  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:fillViewport="true">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
  <com.google.android.material.textfield.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:id="@+id/input_nome_activity_cadastro">
    <EditText
        android:id="@+id/ins_nome_activity_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/nome_completo"
        android:inputType="textPersonName" />
  </com.google.android.material.textfield.TextInputLayout>
  <com.google.android.material.textfield.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:id="@+id/input_telefone_activity_cadastro">
    <EditText
        android:id="@+id/ins_telefone_activity_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/n_mero_de_telefone"
        android:inputType="phone" />
  </com.google.android.material.textfield.TextInputLayout>
  <com.google.android.material.textfield.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:id="@+id/input_email_activity_cadastro">
    <EditText
        android:id="@+id/ins_email_activity_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress" />
  </com.google.android.material.textfield.TextInputLayout>
  <com.google.android.material.textfield.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:id="@+id/input_numero_de_matricula_activity_cadastro">
    <EditText
        android:id="@+id/ins_numero_de_matricula_activity_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/n_mero_de_matricula"
        android:inputType="textPersonName" />
  </com.google.android.material.textfield.TextInputLayout>
<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:id="@+id/input_nickname_activity_cadastro">
  <EditText
      android:id="@+id/ins_nickname_activity_cadastro"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:autofillHints=""
      android:hint="@string/nome_de_usuario"
      android:inputType="textPersonName" />
</com.google.android.material.textfield.TextInputLayout>
  <com.google.android.material.textfield.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:id="@+id/input_senha_activity_cadastro">
    <EditText
        android:id="@+id/ins_senha_activity_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/senha"
        android:inputType="textPassword" />
  </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>

  </ScrollView>

  </androidx.constraintlayout.widget.ConstraintLayout>