<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_orange"
    tools:context=".Views.MenuInicial">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="25dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <LinearLayout
            android:id="@+id/super_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/light_gray">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/gridLayout"
                app:layout_constraintEnd_toEndOf="@+id/gridLayout"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/gridLayout">

                <TextView
                    android:id="@+id/mensagem_de_boas_vindas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bem_vindo" />
            </LinearLayout>

            <GridLayout
                android:id="@+id/gridLayout"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:alignmentMode="alignMargins"
                android:columnCount="2"
                android:columnOrderPreserved="false"
                android:rowCount="2"
                android:useDefaultMargins="true">

                <Button
                    android:id="@+id/button_postar"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_rowSpan="1"
                    android:layout_rowWeight="1"
                    android:layout_columnSpan="1"
                    android:layout_columnWeight="1"
                    android:backgroundTint="@color/blue"
                    android:text="@string/postar_no_mural" />

                <Button
                    android:id="@+id/button_minhas_solicitacoes"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_rowSpan="1"
                    android:layout_rowWeight="1"
                    android:layout_columnSpan="1"
                    android:layout_columnWeight="1"
                    android:text="@string/minhas_solicitacoes" />

                <Button
                    android:id="@+id/button_responder"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_rowSpan="1"
                    android:layout_rowWeight="1"
                    android:layout_columnSpan="1"
                    android:layout_columnWeight="1"
                    android:text="@string/responder" />

                <Button
                    android:id="@+id/button_adiconar_disciplinas"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_rowSpan="1"
                    android:layout_rowWeight="1"
                    android:layout_columnSpan="1"
                    android:layout_columnWeight="1"
                    android:backgroundTint="@color/blue"
                    android:text="@string/adicionar_disciplinas" />


            </GridLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/notificacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_menu"
        tools:visibility="visible"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="@color/light_gray">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                app:cardBackgroundColor="#DEEBFF"
                tools:ignore="MissingConstraints">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/numero_de_solicitacoes"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="5dp"
                        android:padding="8dp"
                        android:text="0"
                        android:textAlignment="center"
                        android:textSize="24sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/solicitacoes"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/s_solicitacao"
                            android:textSize="12sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:visibility="gone" />
                    </LinearLayout>
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/solicitacoes_rv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>