<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.RegistrarSolicitacao"
    android:background="@drawable/orange_gradient">

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/preencha_a_solicitacao"
                android:fontFamily="@f">

            </TextView>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_gray"
                android:layout_marginVertical="10dp"/>

            <!-- Campo para selecionar o a disciplina -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_disciplina_activity_registrar_solicitacao"
                style="@style/AutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/espaco_campos"
                android:hint="@string/disciplina">

                <AutoCompleteTextView
                    android:id="@+id/ins_disciplina_activity_registrar_solicitacao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:inputType="textPersonName"

                    />
            </com.google.android.material.textfield.TextInputLayout>
            <!--***************************************************-->
            <!-- Campo para preencher com a descrição -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_descricao_activity_registrar_solicitacao"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="@dimen/espaco_campos">

                <EditText
                    android:id="@+id/ins_descricao_activity_registrar_solicitacao"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints=""
                    android:gravity="start"
                    android:hint="@string/descricao"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--***************************************************-->

            <!-- Botão para postar/registrar uma solicitação -->
            <Button
                android:id="@+id/btn_cadastrar_activity_cadastro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/solicitar" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
        <!--***************************************************-->

</androidx.constraintlayout.widget.ConstraintLayout>