<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center">
            <!-- Campo para preencher com o apelido/nome de usuário -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_nickname_activity_login"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/espaco_campos">

                <EditText
                    android:id="@+id/ins_nickname_activity_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/nome_de_usuario"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--***************************************************-->
            <!-- Campo para preencher com a senha -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_senha_activity_login"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/espaco_campos">

                <EditText
                    android:id="@+id/ins_senha_activity_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/senha"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--***************************************************-->
            <!-- Botão para cadastrar o usuário -->
            <Button
                android:id="@+id/btn_login_activity_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login" />
        </LinearLayout>
        <!--***************************************************-->
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>